# cpp-portfolio

./: .gitignore
diploma/: Agent.cpp  Agent.h  CMakeLists.txt  Config.cpp  Config.h  Dataset.cpp  Dataset.h  main.cpp  utils.cpp  utils.h
diploma/models/: BaselineStdMNIST.cpp  BaselineStdMNIST.h  NeuralNetworkBase.h
diploma/scenarios/: 01.cfg  02.cfg
ml_murphy/: ex1.py
tcpp_pl/X_3/: CMakeLists.txt  general.cpp  helloWorld.cpp  main.cpp  q&a  readIn.cpp  writeOut.cpp
tcpp_pl/X_4/: CMakeLists.txt  general.cpp  general.h  main.cpp
